Excel export formázással

--- a/IRF_Project/IRF_Project/IRF_Project.csproj
+++ b/IRF_Project/IRF_Project/IRF_Project.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\TipsuokEnum.cs" />
     <Compile Include="Eszkozok.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -226,5 +227,6 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
