--- a/IRF_Project/IRF_Project/IRF_Project.csproj
+++ b/IRF_Project/IRF_Project/IRF_Project.csproj
@@ -70,6 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Help_uc.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Entities\Help_uc.Designer.cs">
+      <DependentUpon>Help_uc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\TipsuokEnum.cs" />
     <Compile Include="Entities\Valogatott.cs" />
     <Compile Include="Eszkozok.cs">
@@ -104,24 +110,27 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Kereso_uc.cs">
+    <Compile Include="Entities\Kereso_uc.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Kereso_uc.Designer.cs">
+    <Compile Include="Entities\Kereso_uc.Designer.cs">
       <DependentUpon>Kereso_uc.cs</DependentUpon>
     </Compile>
-    <Compile Include="Excelexport_uc.cs">
+    <Compile Include="Entities\Excelexport_uc.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Excelexport_uc.Designer.cs">
+    <Compile Include="Entities\Excelexport_uc.Designer.cs">
       <DependentUpon>Excelexport_uc.cs</DependentUpon>
     </Compile>
-    <Compile Include="Fooldal_uc.cs">
+    <Compile Include="Entities\Fooldal_uc.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Fooldal_uc.Designer.cs">
+    <Compile Include="Entities\Fooldal_uc.Designer.cs">
       <DependentUpon>Fooldal_uc.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Entities\Help_uc.resx">
+      <DependentUpon>Help_uc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,13 +146,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Kereso_uc.resx">
+    <EmbeddedResource Include="Entities\Kereso_uc.resx">
       <DependentUpon>Kereso_uc.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Excelexport_uc.resx">
+    <EmbeddedResource Include="Entities\Excelexport_uc.resx">
       <DependentUpon>Excelexport_uc.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Fooldal_uc.resx">
+    <EmbeddedResource Include="Entities\Fooldal_uc.resx">
       <DependentUpon>Fooldal_uc.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Model1.edmx">
@@ -185,6 +194,12 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="lib\Help_excel.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\Help_kereso.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="lib\note_pen_icon_173010.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
