--- a/IRF_Project/IRF_Project/IRF_Project.csproj
+++ b/IRF_Project/IRF_Project/IRF_Project.csproj
@@ -76,7 +76,13 @@
     <Compile Include="Entities\Help_uc.Designer.cs">
       <DependentUpon>Help_uc.cs</DependentUpon>
     </Compile>
-    <Compile Include="Entities\TipsuokEnum.cs" />
+    <Compile Include="Entities\GyartoEnum.cs" />
+    <Compile Include="Entities\Torles_uc.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Entities\Torles_uc.Designer.cs">
+      <DependentUpon>Torles_uc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Valogatott.cs" />
     <Compile Include="Eszkozok.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -86,12 +92,6 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -131,11 +131,11 @@
     <EmbeddedResource Include="Entities\Help_uc.resx">
       <DependentUpon>Help_uc.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Entities\Torles_uc.resx">
+      <DependentUpon>Torles_uc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
