--- a/IRF_Project/IRF_Project/IRF_Project.csproj
+++ b/IRF_Project/IRF_Project/IRF_Project.csproj
@@ -70,6 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Form_kerdes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Entities\Form_kerdes.Designer.cs">
+      <DependentUpon>Form_kerdes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Help_uc.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,6 +83,7 @@
       <DependentUpon>Help_uc.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\GyartoEnum.cs" />
+    <Compile Include="Entities\IdeiglenesKuka.cs" />
     <Compile Include="Entities\Torles_uc.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -128,6 +135,9 @@
     <Compile Include="Entities\Fooldal_uc.Designer.cs">
       <DependentUpon>Fooldal_uc.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Entities\Form_kerdes.resx">
+      <DependentUpon>Form_kerdes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Entities\Help_uc.resx">
       <DependentUpon>Help_uc.cs</DependentUpon>
     </EmbeddedResource>
@@ -164,6 +174,7 @@
     </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Eszkozok.datasource" />
+    <None Include="Properties\DataSources\IRF_Project.Entities.IdeiglenesKuka.datasource" />
     <None Include="Properties\DataSources\LeltarEntities.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
